# golf

./: .dockerignore  .gitignore  .pylintrc  CustomQueue.py  IntelligentGolf.py  KnolePark.py  Library.py  MasterScoreboard.py  Parser.py  Procfile  Procfile.windows  README.md  app.py  asset.py  better_app.py  brs  brs.py  brs_app.py  fly.toml  index.js  intelligent.py  manage.sh  ms_parser.py  nginx.conf  nginx.prod.conf  package-lock.json  package.json  pyproject.toml  q.py  q_funcs.py  redis_helpers.py  requirements.txt  s3_job_store.py  scheduler.py  scraper.py  views.py
brs-frontend/: .dockerignore  index.html  package-lock.json  package.json  vite.config.ts
brs-frontend/src/: App.tsx  Layout.tsx  atoms.tsx  main.tsx
brs-frontend/src/brs/: AddBooking.tsx  App.tsx  BRS.tsx  BookingsList.tsx  Login.tsx  atoms.tsx
brs-frontend/src/masterscoreboard/: AddBooking.tsx  App.tsx  Bookings.tsx  Login.tsx  TeeTimes.tsx  atoms.tsx
debug/: 1-clickToConfirmEntry  1-clickToConfirmEntry-file  2-slots  2-slots-file  3-signUp  brow  comp_list  grif
frontend/: package-lock.json  package.json  tsconfig.json
frontend/src/: App.tsx  index.tsx  mvp.css  netlifyAuth.js  transport.ts
systemd/: app.service  scheduler.service  worker.service
